<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".PersonalDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Toolbar -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@drawable/profilebg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/arrow_left" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/rubik_semibold"
                android:text="@string/personal_details_title"
                android:textSize="24sp" />
        </LinearLayout>


        <!-- Change Profile Picture Section -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="12dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_semibold"
                    android:text="@string/personal_details_profile_title"
                    android:textSize="20sp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:background="#CCCCCC" />
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profileAvatarPreview"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/baseline_person_3_24"
                    app:civ_border_color="#9E9E9E"
                    app:civ_border_width="2dp" />
                <Button
                    android:id="@+id/btnChangeProfilePic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/personal_details_change_picture" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <!-- Change Name Section -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="12dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_semibold"
                    android:text="@string/personal_details_username"
                    android:textSize="20sp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:background="#CCCCCC" />
                <TextView
                    android:id="@+id/tvCurrentName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_details_username_title"
                    android:textSize="16sp"/>
                <EditText
                    android:id="@+id/etNewName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/personal_details_username_hint" />
                <Button
                    android:id="@+id/btnChangeUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="8dp"
                    android:text="@string/personal_details_username" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <!-- Change Email Section -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="12dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_semibold"
                    android:text="@string/personal_details_email_title"
                    android:textSize="20sp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:background="#CCCCCC" />
                <EditText
                    android:id="@+id/etPasswordForEmailChange"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/personal_details_email_hint"
                    android:inputType="textPassword" />
                <EditText
                    android:id="@+id/etNewEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/personal_details_new_email_hint"
                    android:inputType="textEmailAddress" />
                <EditText
                    android:id="@+id/etConfirmNewEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/personal_details_confirm_email_title"
                    android:inputType="textEmailAddress" />
                <Button
                    android:id="@+id/btnChangeEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="8dp"
                    android:text="@string/personal_details_change_email" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</ScrollView>
